1- fix tabs spacing

--- a/src/assets/styles/components/_tabs.scss
+++ b/src/assets/styles/components/_tabs.scss
@@ -58,7 +58,7 @@
   border-radius: 0;
   // margin: 14px 25px;
   padding: 14px 15px;
-  margin: 0 15px 0 0;
+  margin: 0 ;
   line-height: 1;
   white-space: nowrap;
   text-decoration: none;
